--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "bizcharts": "^4.1.9",
     "body-parser": "^1.19.0",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
